# bridge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  check.sh  compose.yaml  config_example.yaml  deny.toml
.forgejo/workflows/: build_and_release.yaml  ci.yaml  docker_cicd.yaml
.github/: dependabot.yml
.github/workflows/: build_and_release.yaml  cargo_deny.yaml  cargo_semver_checks.yaml  ci.yaml  cicd.yaml  crate_type.yaml  docker_cicd.yaml  publish.yaml  release.yaml  rust-clippy.yml  rust.yml  weekly.yaml
attribution/: dependencies.toml  self.toml
guide/: k8s.md
src/: args.rs  errors.rs  format.rs  handelrs.rs  handlers.rs  main.rs  model.rs  nats.rs  util.rs  value.rs
src/bots/: mod.rs  model.rs
src/bots/reader/: handlers.rs  mod.rs
src/bots/reader/config_examples/: auto.yaml  basic.yaml
src/bots/writer/: mod.rs  model.rs  util.rs
src/bots/writer/config_examples/: basic.yaml  custom_formats.yaml
src/bridge/: handlers.rs  mod.rs
src/default_config/: econ.yaml  handler.yaml  tg.yaml
src/econ/: enums.rs  handlers.rs  mod.rs  model.rs
src/econ/config_examples/: auth.yaml  basic.yaml  custom_path.yaml  first_commands.yaml  queue.yaml  tasks.yaml
src/handler/: handlers.rs  mod.rs  model.rs
src/handler-auto/: handlers.rs  mod.rs  regex.rs
src/handler/config_examples/: auto.yaml  basic.yaml  custom_queue.yaml  sync_and_log.yaml
src/handlers/: mod.rs
src/handlers/handler/: handlers.rs  mod.rs
src/handlers/handler-auto/: handlers.rs  mod.rs  model.rs  regex.rs
src/tg/: model.rs
src/tg/reader/: handlers.rs  mod.rs  model.rs
src/tg/writer/: mod.rs  model.rs  util.rs
src/transfer/: mod.rs
src/util/: emojis.rs  errors.rs  mod.rs  patterns.rs  utils.rs
src/util-handler/: handlers.rs  mod.rs
