[package]
name = "bridge"
authors = ["ByFox"]
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
tw-econ = { git = "https://github.com/teeworlds-nats/asyns-tw-econ" }
async-nats = { version = "0.41.0" }
tokio = { version = "1.45.1", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.210"
serde_yaml = "0.9.33"
serde_json = "1.0.140"
futures-util = "0.3.31"
clap = { version = "4.5.39", features = ["derive"] }
regex = "1.11.1"
futures = "0.3.31"
signal-hook = "0.3.18"
bytes = "1.10.1"
nestify = "0.3.3"
teloxide = { version = "0.15.0", features = ["macros", "native-tls"] }
anyhow = "1.0.98"
lazy_static = "1.5.0"
chrono = "0.4.41"
rand = "0.8.5"
cron = "0.15.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
