[package]
name = "bridge"
authors = ["ByFox"]
readme = "README.md"
license = "MIT"
version = "0.2.0"
edition = "2021"

[dependencies]
async-tw-econ = { version = "0.7.0" }
async-nats = { version = "0.45.0" }
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.29"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.210"
serde_yaml = "0.9.33"
serde_json = "1.0.149"
futures-util = "0.3.31"
clap = { version = "4.5.54", features = ["derive"] }
regex = "1.12.2"
futures = "0.3.31"
signal-hook = "0.4.1"
bytes = "1.11.0"
nestify = "0.3.3"
teloxide = { version = "0.17.0", features = ["macros", "native-tls"] }
anyhow = "1.0.100"
lazy_static = "1.5.0"
chrono = "0.4.43"
rand = "0.8.5"
cron = "0.15.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
